--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,4 +1,13 @@
-form.signup,
-form.login {
-  margin-top: 50px;
+  
+.list-group-item {
+  line-height: 2.5;
+}
+
+.navbar-title {
+  color: #4a4a4a;
+}
+
+.navbar-title:hover {
+  text-decoration: none;
+  color: #4a4a4a;
 }
