--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -1,24 +1,24 @@
-<div>Test Here 1 </div>
 <div class="container blog">
+  <h1>Current Exercises</h1>
   <div class="row">
     <div class="col-md-2 col-sm-2">
-      <a class="btn btn-default" href="/exercise">New Exercise</a>
+      <a class="btn btn-default" href="/exercise">Add Exercise</a>
     </div>
     <div class="col-md-2 col-sm-2">
-      <a class="btn btn-default" href="/workouts">Manage Worrkout </a>
+      <a class="btn btn-default" href="/workouts">Manage Worrkouts </a>
     </div>
   </div>
   <div class="row">
     <div class="col-md-12 blog-container">
-      {{#each posts}}
-      <div class="panel panel-default" data-post="{{id}}">
+      {{#each exercises}}
+      <div class="panel panel-default" data-exercise="{{id}}">
         <div class="panel-heading">
           <button class="delete btn btn-danger">x</button>
           <button class="edit btn btn-info">EDIT</button>
           <h2>{{title}}</h2>
           <small>{{createdAt}}</small>
           </h2>
-          <h5 style="float: right; color: blue; margin-top: -10px;">Written by: {{Workout.name}} </h5>
+          <h5 style="float: right; color: blue; margin-top: -10px;">Workout Plan: {{Workout.name}} </h5>
         </div>
         <div class="panel-body">
           <p>{{body}}</p>
@@ -28,7 +28,6 @@
     </div>
   </div>
 </div>
-<div>Test Here 2 </div>
 <!-- Custom Script -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.0/moment.min.js" type="text/javascript"></script>
 <script src="js/blog.js" type="text/javascript"></script>
