--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -46,6 +46,31 @@ button.edit {
   margin-top: 30px;
 }
 
+html {
+  min-height: 100%;
+  position: relative;
+}
+
+.container-fluid {
+    padding-top: 70px;
+    padding-bottom: 70px;
+}
+
+
+.navbar {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  border: 0;
+  border-radius: 0;
+  margin-bottom: 0;
+  font-size: 12px;
+  letter-spacing: 5px;
+}
+
+.navbar-nav  li a:hover {
+  color: #1abc9c !important;
+}
+
 .footer-padding {
 	padding-bottom: 60px;
 }
