--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -27,7 +27,17 @@
       {{/each}}
     </div>
   </div>
+
+  <div class="row text-center">
+    <div class="well">
+      <p class="quote">
+        {{content}} {{author}}
+      </p>
+    </div>
+  </div>
 </div>
 <!-- Custom Script -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.0/moment.min.js" type="text/javascript"></script>
-<script src="js/blog.js" type="text/javascript"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+  crossorigin="anonymous">
+    <script src="js/blog.js" type="text/javascript"></script>
