--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,20 +1,3 @@
-{{!-- <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <title>Blog - Express</title>
-  <!-- Latest compiled and minified CSS & JS -->
-  <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/flatly/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css" media="screen" title="no title">
-  <script src="https://code.jquery.com/jquery.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-</head>
-<body>
-  {{{body}}}
-</body>
-</html> --}}
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -48,7 +31,7 @@
 
   <div class="footer-padding"></div>
   <div class="footer">
-    <p>Made with</p>
+    <p>Copyright (c) 2020 | All Rights Reserved</p>
   </div>
 
 </html>
