--- a/views/exercise.handlebars
+++ b/views/exercise.handlebars
@@ -1,21 +1,21 @@
 <div class="container">
     <div class="row top-30">
-        <div class="col-md-2 col-sm-2">
+        {{!-- <div class="col-md-2 col-sm-2">
             <a class="btn btn-default" href="/blog">Go to Home</a>
         </div>
         <div class="col-md-2 col-sm-2">
             <a class="btn btn-default" href="/workouts">Manage Workouts</a>
-        </div>
+        </div> --}}
     </div>
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
             <form id="exercise">
                 <div class="form-group">
                     <label for="title">Title:</label>
-                    <input placeholder="Post Title" type="text" class="form-control" id="title">
+                    <input placeholder="Exercise name" type="text" class="form-control" id="title">
                     <br />
                     <label for="body">Body:</label>
-                    <textarea placeholder="Post Body" class="form-control" rows="10" id="body"></textarea>
+                    <textarea placeholder="Exercise description" class="form-control" rows="10" id="body"></textarea>
                     <div class="form-group">
                         <label for="category">Select Workout:</label>
                         <select class="form-control" id="workout">
