--- a/views/workouts.handlebars
+++ b/views/workouts.handlebars
@@ -1,11 +1,11 @@
 <div class="container">
     <div class="row top-30">
-        <div class="col-md-2 col-sm-2">
+        {{!-- <div class="col-md-2 col-sm-2">
             <a class="btn btn-default" href="/blog">Home</a>
         </div>
         <div class="col-md-2 col-sm-2">
             <a class="btn btn-default" href="/exercise">New Exercise</a>
-        </div>
+        </div> --}}
     </div>
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
@@ -37,6 +37,6 @@
             </div>
         </div>
     </div>
-    </d>
-    <!-- Custom Script -->
-    <script src="js/workout.js" type="text/javascript"></script>
+</div>
+<!-- Custom Script -->
+<script src="js/workout.js" type="text/javascript"></script>
