--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -34,4 +34,6 @@
     <p>Copyright (c) 2020 | All Rights Reserved</p>
   </div>
 
+  <script src="https://code.jquery.com/jquery.js"></script>
+
 </html>
