--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,28 +1,33 @@
-<div id="home">
-
-    <section class="hero is-dark is-medium">
-        <div class="hero-body has-text-centered">
-            <div class="container">
-                <h1 class="title is-1 is-spaced">
-                    Welcome to Workout Tracker!
-                </h1>
-                <h2 class="subtitle is-4">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-                    and scrambled it to make a type specimen book.
-                </h2>
-            </div>
+<div class="container blog">
+  <h1>Current Exercises</h1>
+  <div class="row">
+    {{!-- <div class="col-md-2 col-sm-2">
+      <a class="btn btn-default" href="/exercise">Add Exercise</a>
+    </div>
+    <div class="col-md-2 col-sm-2">
+      <a class="btn btn-default" href="/workouts">Manage Worrkouts </a>
+    </div> --}}
+  </div>
+  <div class="row">
+    <div class="col-md-12 blog-container">
+      {{#each exercises}}
+      <div class="panel panel-default" data-exercise="{{id}}">
+        <div class="panel-heading">
+          <button class="delete btn btn-danger">x</button>
+          <button class="edit btn btn-info">EDIT</button>
+          <h2>{{title}}</h2>
+          <small>{{createdAt}}</small>
+          </h2>
+          <h5 style="float: right; color: blue; margin-top: -10px;">Workout Plan: {{Workout.name}} </h5>
         </div>
-        <div class="hero-footer has-text-centered" style="padding-bottom: 2rem;">
-            <div class="container buttons is-centered">
-                <button class="button is-light is-large" style="margin-left: 5 rem; margin-right: 5rem;"><a
-                        href="./">View Your Workout</a></button>
-                <button class="button is-light is-large" style="margin-left: 5 rem; margin-right: 5rem;"><a
-                        href="./">Add Workout</a></button>
-                <button class="button is-light is-large" style="margin-left: 5 rem; margin-right: 5rem;"><a
-                        href="./">Discover</a></button>
-            </div>
+        <div class="panel-body">
+          <p>{{body}}</p>
         </div>
-    </section>
-
+      </div>
+      {{/each}}
+    </div>
+  </div>
 </div>
+<!-- Custom Script -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.0/moment.min.js" type="text/javascript"></script>
+<script src="js/index.js" type="text/javascript"></script>
