--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,6 +20,7 @@
         <li id="newExercise"><a href="/exercise">New Exercise</a></li>
         <li id="manageExercise"><a href="/workouts">Manage workout</a></li>
         <li id="listExercise"><a href="/list">Excercise List</a></li>
+        <li id="signupButton"><a href="/signup"><button class="btn btn-info">Sign Up</button></a></li>
       </ul>
     </div>
   </nav>
