--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,6 +9,7 @@
   <!-- Latest compiled and minified CSS & JS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css" media="screen" title="no title">
+  <link rel="icon" href="image/favicon.ico">
 
   <nav class="navbar navbar-default">
     <div class="container">
@@ -29,6 +30,7 @@
 
 <body>
   {{{body}}}
+  <img class="logo" src="image/Logo.png" alt="">
 
   <div class="footer-padding"></div>
   <div class="footer">
