--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,12 +1,12 @@
 <div class="container blog">
   <h1>Current Exercises</h1>
   <div class="row">
-    <div class="col-md-2 col-sm-2">
+    {{!-- <div class="col-md-2 col-sm-2">
       <a class="btn btn-default" href="/exercise">Add Exercise</a>
     </div>
     <div class="col-md-2 col-sm-2">
       <a class="btn btn-default" href="/workouts">Manage Worrkouts </a>
-    </div>
+    </div> --}}
   </div>
   <div class="row">
     <div class="col-md-12 blog-container">
@@ -28,7 +28,6 @@
     </div>
   </div>
 </div>
-
 <!-- Custom Script -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.0/moment.min.js" type="text/javascript"></script>
 <script src="js/index.js" type="text/javascript"></script>
