Revert "db updates and styling"

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,7 +21,7 @@
           <h5 style="float: right; color: blue; margin-top: -10px;">Workout Plan: {{Workout.name}} </h5>
         </div>
         <div class="panel-body">
-          <p>{{desc}}</p>
+          <p>{{body}}</p>
         </div>
       </div>
       {{/each}}
