--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,14 +2,6 @@ button.submit {
   float: right;
 }
 
-.textadjust {
-  overflow: hidden; 
-  overflow-wrap: break-word; 
-  resize: auto; 
-  height: 34px;
-
- }
-
 form#exercise {
   margin-top: 50px;
 }
@@ -108,6 +100,4 @@ html {
 
 .quote {
   font-size: 15px;
-  font-family: cursive;
- }
-
+  font-family: cursive; }
