--- a/views/workouts.handlebars
+++ b/views/workouts.handlebars
@@ -11,11 +11,12 @@
         <div class="col-md-8 col-md-offset-2">
             <div class="workout-container">
                 <h1>Current Workouts</h1>
+
                 <table class="table table-striped">
                     <thead>
                         <form id="workout-form">
                             <td colspan="4">
-                                <input placeholder="Enter a name" id="workout-name" type="text" />
+                                <input placeholder="Enter a Workout" id="workout-name" type="text" />
                             </td>
                             <td>
                                 <button type="submit" class="btn btn-success">Create Workout</button>
