--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,6 +37,14 @@
     <p>Copyright (c) 2020 | All Rights Reserved</p>
   </div>
 
+  <script>
+    $('textarea').each(function () {
+      this.setAttribute('style', 'height:' + (this.scrollHeight) + 'px;overflow-y:hidden;');
+    }).on('input', function () {
+      this.style.height = 'auto';
+      this.style.height = (this.scrollHeight) + 'px';
+    });
+  </script>
   <script src="https://code.jquery.com/jquery.js"></script>
 
 </html>
