--- a/views/exercise.handlebars
+++ b/views/exercise.handlebars
@@ -40,9 +40,9 @@
                         style="overflow: hidden; overflow-wrap: break-word; resize: auto; height: 34px;"></textarea>
                     <br />
 
-                    <label for="videoUrl">Video URL:</label>
+                    {{!-- <label for="videoUrl">Video URL:</label>
                     <input placeholder="Add video Url" type="text" class="form-control" id="videoUrl">
-                    <br />
+                    <br /> --}}
 
 
                     <div class="form-group">
@@ -50,7 +50,6 @@
                         <select class="form-control" id="workout">
                         </select>
                     </div>
-                    <br />
                     <button type="submit" class="btn btn-success submit">Submit</button>
                     <br />
                 </div>
@@ -59,4 +58,5 @@
     </div>
 </div>
 <!-- Custom Script -->
+
 <script src="js/exercise.js" type="text/javascript"></script>
