--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,33 +1,33 @@
-<div class="container blog">
-  <h1>Current Exercises</h1>
-  <div class="row">
-    {{!-- <div class="col-md-2 col-sm-2">
-      <a class="btn btn-default" href="/exercise">Add Exercise</a>
-    </div>
-    <div class="col-md-2 col-sm-2">
-      <a class="btn btn-default" href="/workouts">Manage Worrkouts </a>
-    </div> --}}
-  </div>
-  <div class="row">
-    <div class="col-md-12 blog-container">
-      {{#each exercises}}
-      <div class="panel panel-default" data-exercise="{{id}}">
-        <div class="panel-heading">
-          <button class="delete btn btn-danger">x</button>
-          <button class="edit btn btn-info">EDIT</button>
-          <h2>{{title}}</h2>
-          <small>{{createdAt}}</small>
+<div class="row top-30">
+
+  <div id="home">
+
+    <section class="hero is-dark is-medium workout-container">
+      <div class="hero-body has-text-centered">
+        <div class="container">
+          <h1 class="title ">
+            Welcome to Workwout Planner
+          </h1> <br>
+          <h2 class="subtitle">
+            Your leading working planning resource.
           </h2>
-          <h5 style="float: right; color: blue; margin-top: -10px;">Workout Plan: {{Workout.name}} </h5>
-        </div>
-        <div class="panel-body">
-          <p>{{desc}}</p>
         </div>
       </div>
-      {{/each}}
-    </div>
+      <br><br>
+      <div class="subtitle">
+        <div class="btnHome">
+
+          <button class="button" style="margin-left: 5 rem; margin-right: 5rem;"><a href="/list">List
+              Current Exercises</a></button>
+          <button class="button is-light is-large" style="margin-left: 5 rem; margin-right: 5rem;"><a
+              href="/exercise">Add
+              an Exercise </a></button>
+          <button class="button is-light is-large" style="margin-left: 5 rem; margin-right: 5rem;"><a
+              href="/workouts">Wiew and Manage Workouts</a></button>
+        </div>
+      </div>
+    </section>
+
   </div>
+
 </div>
-<!-- Custom Script -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.0/moment.min.js" type="text/javascript"></script>
-<script src="js/index.js" type="text/javascript"></script>
