--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
         <li id="home"><a href="/index">HOME</a></li>
         <li id="newExercise"><a href="/exercise">New Exercise</a></li>
         <li id="manageExercise"><a href="/workouts">Manage workout</a></li>
-        <li id="listExercise"><a href="/list">Excercise List</a></li>
+        <li id="listExercise"><a href="/list">Exercise List</a></li>
       </ul>
     </div>
   </nav>
