--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,7 +19,7 @@
         <p class="navbar-brand">Workout Planner</p>
       </div>
       <ul class="nav navbar-nav navbar-right">
-        <li id="home"><a href="/">HOME</a></li>
+        <li id="home"><a href="/index">HOME</a></li>
         <li id="newExercise"><a href="/exercise">New Exercise</a></li>
         <li id="manageExercise"><a href="/workouts">Manage workout</a></li>
         <li id="listExercise"><a href="/list">Exercise List</a></li>
